# src/Storm/Chronicler/Http/Controllers/CreateStreamApi.php
@@ -2,20 +2,19 @@
 
 declare(strict_types=1);
 
-namespace Storm\Chronicler\Http\Controllers\EventStream;
+namespace Storm\Chronicler\Http\Controllers;
 
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
-use OpenApi\Attributes\Get;
 use OpenApi\Attributes\Parameter;
+use OpenApi\Attributes\Post;
 use OpenApi\Attributes\Response;
 use OpenApi\Attributes\Schema;
-use Storm\Chronicler\Http\Controllers\StreamApi;
 use Throwable;
 
-#[Get(
-    path: '/event-stream',
-    summary: 'Check if an event stream exists',
+#[Post(
+    path: '/stream',
+    summary: 'Create a new stream',
     tags: ['Stream'],
     parameters: [
         new Parameter(
@@ -31,17 +30,17 @@ use Throwable;
         new Response(response: 204, description: 'ok'),
         new Response(ref: '#/components/responses/401', response: 401),
         new Response(ref: '#/components/responses/403', response: 403),
-        new Response(ref: '#/components/responses/StreamNotFound', response: 404),
+        new Response(ref: '#/components/responses/StreamAlreadyExists', response: 419),
         new Response(ref: '#/components/responses/422', response: 422),
         new Response(ref: '#/components/responses/500', response: 500),
     ],
 )]
-final readonly class RequestStreamExistsApi extends StreamApi
+final readonly class CreateStreamApi extends StreamApi
 {
-    public function __invoke(Request $request, RequestStreamExists $requestStreamExists): JsonResponse
+    public function __invoke(Request $request, CreateStream $process): JsonResponse
     {
         try {
-            $response = $requestStreamExists($request);
+            $response = $process($request);
         } catch (Throwable $exception) {
             return $this->handleException($exception, $request);
         }
