# src/Storm/Chronicler/Http/Controllers/DeleteStreamApi.php
@@ -2,7 +2,7 @@
 
 declare(strict_types=1);
 
-namespace Storm\Chronicler\Http\Controllers\EventStream;
+namespace Storm\Chronicler\Http\Controllers;
 
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
@@ -10,11 +10,10 @@ use OpenApi\Attributes\Delete;
 use OpenApi\Attributes\Parameter;
 use OpenApi\Attributes\Response;
 use OpenApi\Attributes\Schema;
-use Storm\Chronicler\Http\Controllers\StreamApi;
 use Throwable;
 
 #[Delete(
-    path: '/event-stream',
+    path: '/stream',
     summary: 'Delete stream by stream name',
     tags: ['Stream'],
     parameters: [
@@ -38,10 +37,10 @@ use Throwable;
 )]
 final readonly class DeleteStreamApi extends StreamApi
 {
-    public function __invoke(Request $request, DeleteStream $deleteStream): JsonResponse
+    public function __invoke(Request $request, DeleteStream $process): JsonResponse
     {
         try {
-            $response = $deleteStream($request);
+            $response = $process($request);
         } catch (Throwable $exception) {
             return $this->handleException($exception, $request);
         }
